--- a/src/Components/ChatCard/chatCard.css
+++ b/src/Components/ChatCard/chatCard.css
@@ -1,17 +1,19 @@
 .total-card {
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: flex-start;
-  padding: 20px 30px;
+  padding: 20px 35px;
   border-bottom: solid 3px #f3f5f7;
-  border-right: 2px solid #71b689;
   cursor: pointer;
 }
+.selected {
+  border-right: 2px solid #71b689;
+}
 .total-card > img {
-  width: 30px;
-  height: 30px;
+  width: 35px;
+  height: 35px;
   border-radius: 100%;
-  margin-right: 15px;
+  margin-right: 20px;
 }
 .card-right-section > h4 {
   margin-bottom: 5px;
@@ -19,7 +21,7 @@
 }
 .card-right-section > h4 > span {
   color: rgb(184, 183, 183);
-  margin-left: 50px;
+  margin-left: 70px;
   font-size: 15px;
 }
 .card-right-section > p {
