--- a/src/Pages/Home/home.css
+++ b/src/Pages/Home/home.css
@@ -10,6 +10,18 @@
   width: 70%;
   border-left: solid 2px #f3f5f7;
 }
+.total-right-section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  /* background-color: #f1eeee; */
+  background-image: url("../../images/moroccan-flower.png");
+}
+.total-right-section > h2 {
+  color: gray;
+  font-size: 28px;
+}
 .top-right-section {
   padding: 17px 60px;
   border-bottom: solid 2px #f3f5f7;
@@ -74,11 +86,12 @@
 }
 
 .middle-right-section {
-  background-color: #f1eeee;
+  /* background-color: #f1eeee; */
   padding: 20px;
   width: 100%;
   height: 458px;
   overflow: scroll;
+  background-image: url("../../images/moroccan-flower.png");
 }
 .bottom-right-section {
   padding: 20px 60px;
@@ -100,7 +113,31 @@
   border: 3px solid #f3f5f7;
   border-radius: 5px;
   width: 700px;
-  margin-right: 30px;
+  margin-right: 20px;
+  position: relative;
+}
+.image-preview {
+  position: absolute;
+  right: 0;
+  bottom: 55px;
+}
+.image-preview > img {
+  width: 200px;
+  height: 200px;
+  border-radius: 15px;
+}
+.image-preview > button {
+  position: absolute;
+  top: 7px;
+  right: 7px;
+  outline: none;
+  border: none;
+  padding: 5px;
+  background-color: rgb(184, 0, 0);
+  color: white;
+  font-size: 12px;
+  border-radius: 5px;
+  cursor: pointer;
 }
 .input-card > button {
   padding: 10px 8px 8px;
@@ -111,13 +148,22 @@
   color: rgb(184, 182, 182);
 }
 .bottom-right-section > button {
-  padding: 7px 12px;
-  background-color: white;
+  padding-top: 7px;
+  padding-right: 3px;
+  background-color: #25914b;
   border: none;
   outline: none;
   font-size: 30px;
-  color: gray;
+  color: black;
+  width: 48px;
+  height: 48px;
+  border-radius: 100%;
   cursor: pointer;
+  transition: 0.5s;
+}
+.bottom-right-section > button:hover {
+  color: lightgray;
+  background-color: #24472e;
 }
 .customModal {
   border-radius: 10px;
