--- a/src/Pages/Login/login.css
+++ b/src/Pages/Login/login.css
@@ -1,8 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Lobster&display=swap");
 .total-login {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
+  background-image: url("../../images/original.png");
+  background-size: cover;
 }
 .login-middle {
   width: 300px;
@@ -10,15 +13,44 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 30px 20px;
+  padding: 50px 20px;
+  background-color: white;
   box-shadow: 0 0 20px rgb(187, 186, 186);
   border-radius: 10px;
 }
+.logo {
+  font-size: 50px;
+  color: #1fa082;
+}
 .login-middle > h1 {
-  color: #24472e;
+  color: #8b8989;
+  font-family: "Lobster", sans-serif;
 }
 .login-middle > p {
   margin: 20px 0 30px;
-  color: rgb(129, 128, 128);
+  color: #9db3a6;
   font-size: 20px;
+}
+.login-middle > button {
+  padding: 10px 25px;
+  font-size: 16px;
+  color: #878789;
+  background-color: white;
+  border: 2px solid #e5e5e7;
+  outline: none;
+  border-radius: 5px;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: 0.3s;
+}
+.login-middle > button:hover {
+  background-color: #f0f0f0;
+}
+.login-middle > button > img {
+  margin-right: 7px;
+  width: 20px;
+  height: 20px;
+  border-radius: 100%;
 }
