--- a/src/Components/SenderCard/senderCard.css
+++ b/src/Components/SenderCard/senderCard.css
@@ -14,6 +14,7 @@
 .total-sender-card > img {
   width: 40px;
   height: 40px;
+  border-radius: 100%;
   margin-right: 15px;
 }
 .sender-chat {
@@ -34,4 +35,7 @@
   margin-top: 5px;
   color: rgb(70, 67, 67);
   text-align: right;
+}
+.doc-preview {
+  background-color: red;
 }
